# coffee_vibe_MIQ

./: app.py  main.html  main.py  pyproject.toml  requirements.txt
static/: MIQ_by_Choi.css  MIQ_by_D.css  ads.txt  key.json  key1.json  results.css  tools.py
templates/: MIQ_by_Choi.html  MIQ_by_D.html  admin.html  converter.html  favicon.html  home.html  login.html  login2.html  main.html  players.html  players_roles.html  results.html
